[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solid_oidc_client"
version = "0.0.4"
authors = [
  { name="A_A", email="21040751+Otto-AA@users.noreply.github.com" },
]
description = "A solid-OIDC client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jwcrypto~=1.4.2",
  "oic~=1.5.0",
  "requests~=2.28.2",
]

[project.urls]
"Homepage" = "https://github.com/Otto-AA/solid-oidc-py"
"Bug Tracker" = "https://github.com/Otto-AA/solid-oidc-py/issues"